# tamper-evident-ledger

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  api.py  config.py  db.py  main.py  models.py
app/audit/: __init__.py  chain.py  verifier.py
app/repositories/: __init__.py  ledger.py
app/security/: __init__.py  encryption.py
docs/: architecture.md  threat-model.md
migrations/alembic/: env.py  script.py.mako
migrations/alembic/versions/: 001_create_ledger.py  002_append_only_triggers.py
scripts/: seed.py  tamper.py  verify_chain.py
tests/: conftest.py  test_chain.py  test_encryption.py  test_repository.py
