[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tamper-evident-ledger"
version = "0.1.0"
description = "Tamper-evident audit logging demo: SHA-256 hash chain + AES-256-GCM + PL/pgSQL append-only triggers."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "tamper-evident-ledger authors" }]
keywords = ["audit", "hash-chain", "tamper-evident", "fintech", "compliance", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.36",
    "greenlet>=3.1.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "cryptography>=43",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[project.urls]
Homepage = "https://github.com/your-org/tamper-evident-ledger"
Source = "https://github.com/your-org/tamper-evident-ledger"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "scripts*", "migrations*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
